--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.9.0",
     "hamburger-react": "^2.5.1",
-    "next": "14.2.13",
+    "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18"
   },
